# slime-sat-solver

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.txt  Readme.txt  _config.yml  build.sh  changes_so.txt  changes_v2.1.txt  changes_v2.2.txt  changes_v3.0.txt  changes_v3.1.txt  changes_v4.0.txt  changes_v4.1.1.txt  changes_v4.1.txt  changes_v4.2.txt  index.html  slime5-osx
SLIME-sc2021/: LICENSE
SLIME5-binary/: Benchmarks_SLIME5_vs_Kissat.txt  LICENSE  README  slime5-linux  slime5-osx
SLIME_CLI/: Benchmarks_SLIME5_vs_Kissat.txt  PEQNP_logo_3D_print.stl  Readme.txt  job.html  slime_cli-osx
SLIME_CLI/css/: global.css  jobDetails.css
SLIME_CLI/js/: master.js
SLIME_CLI/slime_cloud/: Readme.txt  slime_cloud  slime_cloud.sh
csp/: readme.txt
csp/Permutation-Reconstruction-from-Differences/: 256.txt  a.csp  licence.txt  permutation-reconstruction.py  readme.txt
csp/n-Queens-Completion-Problem/: generator.py  problem_128_64.csp  problem_256_128.csp  problem_32_16.csp  problem_64_32.csp  readme.txt  render.py  render_128_64.txt  render_256_128.txt  render_32_16.txt  render_512_256.txt  render_64_32.txt  run.sh  solution_128_64.txt  solution_256_128.txt  solution_32_16.txt  solution_512_256.txt  solution_64_32.txt
csp/sugar/: slime-sugar.pl  (+1 more)
slime/: CMakeLists.txt  Dimacs.h  Main.cc  Makefile  Options.cc  Options.h  ParseUtils.h  SimpSolver.cc  SimpSolver.h  Solver.cc  Solver.h  SolverTypes.h  System.cc  System.h  changes_v2.1.txt  starexec_build  starexec_clean  starexec_description.txt
slime/example/: mini_slime.cpp
slime/example/mini-slime/: CMakeLists.txt
slime/include/: Dimacs.h  Options.h  ParseUtils.h  SimpSolver.h  Solver.h  SolverTypes.h
slime/mtl/: Alg.h  Alloc.h  Heap.h  IntTypes.h  Map.h  Queue.h  Sort.h  Vec.h  XAlloc.h
slime/src/: Main.cc  Options.cc  SimpSolver.cc  Solver.cc  System.cc
test/: test.cnf  test.mod  unsat.cnf
(+23 files in other folders)
